welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:7: error: Int(1) does not take parameters
	nbPas=nbPas+1();
                     ^Program:8: error: type mismatch;
 found   : Unit
 required: Boolean
	return 
        ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while(!estSurBiscuit()&&nbPas<7){
^Program:11: error: type mismatch;
 found   : Unit
 required: Boolean
}
^